--- a/fliesen_style.css
+++ b/fliesen_style.css
@@ -77,7 +77,7 @@
    Stone Living page
 ========================= */
 .sl{
-  padding-top: 148px;
+  padding-top: 192px;
   padding-bottom: 80px;
   position: relative;
   z-index: 0;
